Edit 24 de Oct 2018

--- a/palminio_cv_es.tex
+++ b/palminio_cv_es.tex
@@ -145,7 +145,7 @@
 %%% ------------------------------------------------------------
 \NewPart{Sumario}{}
 
-Soy un Ingeniero de Sistemas y Agility Enabler con experiencia como Consultor, Agile Coach, Digital Transformation Advisor, Scrum Master Sr., Team Facilitator e Ingeniería de Software. Las aptitudes con las que me desenvuelvo son: pensador sistémico, liderazgo servicial, resiliente y mejorador, facilitador, comunicativo y sociable, conciencia situacional, asertivo, transparente, mediador y resolutor de conflictos, entusiasta, proactivo y con actitud de empoderamiento.
+Soy un Ingeniero de Sistemas y entrenador y habilitador de agilidad con experiencia como Consultor, Agile Coach, Digital Transformation Advisor, Scrum Master Sr., Team Facilitator e Ingeniería de Software. Las aptitudes con las que me desenvuelvo son: pensador sistémico, liderazgo servicial, resiliente y mejorador, facilitador, comunicativo y sociable, conciencia situacional, asertivo, transparente, mediador y resolutor de conflictos, entusiasta, proactivo y con actitud de empoderamiento.
 Me gusta ayudar con cambios organizacionales, habilitar agilidad en las organizaciones y desarrollar equipos ágiles de excelencia que apliquen prácticas de ingeniería de software. También me llevo bien con la idea de ser un despertador servicial, que influencia en los cambios culturales, desarrollo personal profesional y en hacer que las cosas pasen. Busco desarrollarme en la divulgación, entrenamiento y habilitación de las prácticas ágiles, en Agile Coaching, Ingeniería del Sistema Organizacional y en acompañamiento de transformaciones organizacionales. En esta vía he escrito un libro ("Scrum en ingeniería de software"), mantengo blogs (http://agilismoeningenieriadesoftware.blogspot.cl), participo en comunidades, dicto capacitaciones e influencio, como agente de cambio, en las organizaciones en las cuales me desenvuelvo. Soy un apasionado de lo que hago y me gusta mejorar cada día.
 
 
