Update and Build June 2019

--- a/palminio_cv_en.tex
+++ b/palminio_cv_en.tex
@@ -168,9 +168,19 @@ I'm a Systems Engineer graduated at the “National University of Southern Patag
 %%% ------------------------------------------------------------
 \NewPart{Work experience}{}
 
+%2018-2019 Cencosud Agile Coach by Balancing Loop Consulting SpA
+\WorkEntry{Cencosud (Balancing Loop Consulting contractor)}{Feb. 2018 - Now 2019}{Agile Coach, Digital Transformation Advisor}{
+Agile Coach and Digital Transformation Advisor. I work in the retail holding in Latin America Cencosud (as a consultant and independent provider). I worked in the digital transformation team at the offices of Cencosud (Santiago, Chile). We seek the reinvention of the organization, a new way of being and doing, that involves a cultural, strategic and technological change; with the aim of enabling agility and a way to generate value proposals that satisfy and challenge the user experience of Cencosud clients. Under this challenge I have worked in different areas and business units (Supermarkets, Easy Home Improvement, HHRR, Logistics, etc.). I have supported, trained and collaborated in the development and maturity of different roles (Scrum Masters, Product Owners, Champions, Agile Leaders, etc.). I have worked in the design and strategy of the evolution of Digital Transformation (in Corporate Strategy and in HR). Help in the work of the Digital Academy and organizational communication. And I participated in the design of the Digital Transformation methodology in Cencosud.
+}
+
+%2018 Fundador de Balancing Loop Consulting SpA
+\WorkEntry{Balancing Loop Consulting SPA}{Feb. 2018}{Emprendedor}{
+Entrepreneur and Founder of Balancing Loop Consulting SpA (http://www.balancing-loop.com/) an organizational agility consulting and habilitation company. I have worked as a Cencosud provider with exclusive dedication for more than one year. I have also given some training to clients like Cardif Chile.
+}
+
 %2017 Cencosud Agile Coach
 \WorkEntry{Cencosud (Globant contractor)}{Nov. 2017}{Agile Coach, Digital Transformation Advisor}{
-Agile Coach en Transformación Digital del conglomerados de retail en América Latina Cencosud. Trabajando en el equipo de transformación digital en las oficinas de Cencosud (Santiago de Chile).
+Agile Coach in Transformación Digital. I worked in retail holding of Latin-Amerca Cencosud.I worked in the Digital Transformation Team at the Cencosud offices (Santiago de Chile).
 }
 
 \sepspace
@@ -186,8 +196,8 @@ Agile Coach en Transformación Digital del conglomerados de retail en América L
 \sepspace
 
 %2012-2014 IBA Entertainment limited as Software Engineer Freelancer.
-\WorkEntry{IBA Entertainment limited}{2012-2014}{Software Engineer Freelancer}
-{Software Engineer (as Contractor Freelancer) on Perl Technologies in a context of sportsbetting (Bet3000.com). Some technologies: Perl 5, EmbPerl Object, Object Perl, JSON, RESTful, Mojolicious, Perl DBI. Development in Bet3000 Project (www.bet3000.com) to International Betting Association.}
+\WorkEntry{IBA Entertainment limited}{2012-2014}{Agile Software Engineer (Freelancer)}
+{Software Engineer (as Contractor Freelancer) using a Agile Methodology (XP) on Perl Technologies in a context of sportsbetting (Bet3000.com). Some technologies: Perl 5, EmbPerl Object, Object Perl, JSON, RESTful, Mojolicious, Perl DBI. Development in Bet3000 Project (www.bet3000.com) to International Betting Association.}
 \sepspace
 
 %2013-2014 Make IT Coop. As Associate, Secretary
