--- a/palminio_cv_es.tex
+++ b/palminio_cv_es.tex
@@ -145,8 +145,7 @@
 %%% ------------------------------------------------------------
 \NewPart{Sumario}{}
 
-Soy un Ingeniero de Sistemas y entrenador y habilitador de agilidad con experiencia como Consultor, Agile Coach, Digital Transformation Advisor, Scrum Master Sr., Team Facilitator e Ingeniería de Software. Las aptitudes con las que me desenvuelvo son: pensador sistémico, liderazgo servicial, resiliente y mejorador, facilitador, comunicativo y sociable, conciencia situacional, asertivo, transparente, mediador y resolutor de conflictos, entusiasta, proactivo y con actitud de empoderamiento.
-Me gusta ayudar con cambios organizacionales, habilitar agilidad en las organizaciones y desarrollar equipos ágiles de excelencia que apliquen prácticas de ingeniería de software. También me llevo bien con la idea de ser un despertador servicial, que influencia en los cambios culturales, desarrollo personal profesional y en hacer que las cosas pasen. Busco desarrollarme en la divulgación, entrenamiento y habilitación de las prácticas ágiles, en Agile Coaching, Ingeniería del Sistema Organizacional y en acompañamiento de transformaciones organizacionales. En esta vía he escrito un libro ("Scrum en ingeniería de software"), mantengo blogs (http://agilismoeningenieriadesoftware.blogspot.cl), participo en comunidades, dicto capacitaciones e influencio, como agente de cambio, en las organizaciones en las cuales me desenvuelvo. Soy un apasionado de lo que hago y me gusta mejorar cada día.
+Soy un Ingeniero de Sistemas, entrenador y habilitador de agilidad con experiencia como Consultor, Agile Coach, Digital Transformation Advisor, Scrum Master Sr., Team Facilitator e Ingeniería de Software. Manejo amplios conocimientos referentes a diseño y transformación organizacional. Tengo experiencia en diferentes Transformaciones Digitales. Las aptitudes con las que me desenvuelvo son: pensador sistémico, liderazgo servicial, resiliente y mejorador, facilitador, comunicativo y sociable, conciencia situacional, asertivo, transparente, mediador y resolutor de conflictos, entusiasta, proactivo y con actitud de empoderamiento. Busco ser transdisciplinario y disfruto trabajar en equipo. Me gusta ayudar con cambios organizacionales, habilitar agilidad en las organizaciones y desarrollar equipos ágiles de excelencia que apliquen prácticas de ingeniería de software. También me llevo bien con la idea de ser un despertador servicial, que influencia en los cambios culturales, desarrollo personal profesional y en hacer que las cosas pasen. Busco desarrollarme en la divulgación, entrenamiento y habilitación de las prácticas ágiles, en Agile Coaching, Ingeniería del Sistema Organizacional y en acompañamiento de transformaciones organizacionales. En esta vía he escrito un libro ("Scrum en ingeniería de software"), mantengo blogs (http://agilismoeningenieriadesoftware.blogspot.cl), participo en comunidades, dicto capacitaciones e influencio, como agente de cambio, en las organizaciones en las cuales me desenvuelvo. Soy un apasionado de lo que hago y me gusta mejorar cada día.
 
 
 
@@ -182,13 +181,13 @@ Hice mi formación secundaria, de nivel medio, en una escuela de educación téc
 \NewPart{Experiencia laboral}{}
 
 %2018 Cencosud Agile Coach by Balancing Loop Consulting SpA
-\WorkEntry{Cencosud (Balancing Loop contractor)}{Feb. 2018}{Agile Coach, Digital Transformation Advisor}{
-Agile Coach y Digital Transformation Advisor en Transformación Digital del conglomerados de retail en América Latina Cencosud (como consultor y proveedor independiente). Trabajando en el equipo de transformación digital en las oficinas de Cencosud (Santiago de Chile). Buscamos la reinvención de la organización, una nueva forma de ser y hacer, que involucra un cambio cultural, estratégico y tecnológico; con el objetivo de habilitar la agilidad y una manera de generar propuestas de valor que satisfagan y desafíen la experiencia de usuario de los clientes de Cencosud.
+\WorkEntry{Cencosud (Balancing Loop Consulting contractor)}{Feb. 2018 - Jun. 2019}{Agile Coach, Digital Transformation Advisor}{
+Agile Coach y Digital Transformation Advisor en Transformación Digital del conglomerados de retail en América Latina Cencosud (como consultor y proveedor independiente). Trabajando en el equipo de transformación digital en las oficinas de Cencosud (Santiago de Chile). Buscamos la reinvención de la organización, una nueva forma de ser y hacer, que involucra un cambio cultural, estratégico y tecnológico; con el objetivo de habilitar la agilidad y una manera de generar propuestas de valor que satisfagan y desafíen la experiencia de usuario de los clientes de Cencosud. Bajo este desafío he trabajado en diferentes áreas y unidades de negocio (Supermercados, Mejoramiento de hogar Easy, RRHH, Logística, etc.). He apoyado, entrenado y colaborado en el desarrollo y madurez de diferentes roles (Scrum Masters, Product Owners, Champions, Líderes Ágiles, etc.). He trabajado en el diseño y estrategia de la evolución de la Transformación Digital (en Estrategia Corporativa y en RRHH). Ayude en el trabajo de la Academia Digital y comunicación organizacional. Y participé en el diseño de la metodología de Transformación Digital en Cencosud.
 }
 
 %2018 Fundador de Balancing Loop Consulting SpA
-\WorkEntry{Balancing Loop}{Feb. 2018}{Emprendedor}{
-Emprendedor y Fundador de Balancing Loop Consulting SpA (http://www.balancing-loop.com/) una empresa de consultoría y habilitación de agilidad organizacional.
+\WorkEntry{Balancing Loop Consulting SPA}{Feb. 2018}{Emprendedor}{
+Emprendedor y Fundador de Balancing Loop Consulting SpA (http://www.balancing-loop.com/) una empresa de consultoría y habilitación de agilidad organizacional. He trabajado como proveedor Cencosud con dedicación exclusiva por más de un año. También he dictado algunas capacitaciones a clientes como Cardif Chile.
 }
 
 %2017 Cencosud Agile Coach by Globant
@@ -197,7 +196,7 @@ Agile Coach en Transformación Digital del conglomerados de retail en América L
 \begin{itemize}
 \item Evaluación y acompañamiento en madurez de equipos ágiles.
 \item Acompañamiento en el proceso de transformación Digital.
-\item Capacitación de Equipos y Product Owners.
+\item Capacitación de Equipos, Scrum Masters y Product Owners.
 \end{itemize}
 }
 
@@ -241,8 +240,8 @@ Los últimos meses estuve ejerciendo como Consultor, Agile Coaching y Team Facil
 \sepspace
 
 %2012-2014 IBA Entertainment limited as Software Engineer Freelancer.
-\WorkEntry{IBA Entertainment limited}{2012-2014}{Software Engineer Freelancer}
-{Trabajé en modalidad Freelancer (Monotributista) como Ingeniero de Software, bajo el marco de trabajo eXtreme Programming, para sistema de sportsbetting (Sitio Bet3000.com). Algunas tecnologías usadas: Perl 5, EmbPerl Object, Object Perl, JSON, RESTful, Mojolicious, Perl DBI. Desarrollo en el proyecto Bet3000 (www.bet3000.com) para la empresa International Betting Association.}
+\WorkEntry{IBA Entertainment limited}{2012-2014}{Agile Software Engineer (Freelancer)}
+{Trabajé en modalidad Freelancer (Monotributista independiente) como Ingeniero de Software Ágil, bajo el marco de trabajo ágil eXtreme Programming (XP), para sistema de sportsbetting (Sitio Bet3000.com). Algunas tecnologías usadas: Perl 5, EmbPerl Object, Object Perl, JSON, RESTful, Mojolicious, Perl DBI. Desarrollo en el proyecto Bet3000 (www.bet3000.com) para la empresa International Betting Association.}
 
 \sepspace
 
