Update and Build Sept. 2019

--- a/palminio_cv_es.tex
+++ b/palminio_cv_es.tex
@@ -182,7 +182,15 @@ Hice mi formación secundaria, de nivel medio, en una escuela de educación téc
 
 %2018 Cencosud Agile Coach by Balancing Loop Consulting SpA
 \WorkEntry{Cencosud (Balancing Loop Consulting contractor)}{Feb. 2018 - Jun. 2019}{Agile Coach, Digital Transformation Advisor}{
-Agile Coach y Digital Transformation Advisor en Transformación Digital del conglomerados de retail en América Latina Cencosud (como consultor y proveedor independiente). Trabajando en el equipo de transformación digital en las oficinas de Cencosud (Santiago de Chile). Buscamos la reinvención de la organización, una nueva forma de ser y hacer, que involucra un cambio cultural, estratégico y tecnológico; con el objetivo de habilitar la agilidad y una manera de generar propuestas de valor que satisfagan y desafíen la experiencia de usuario de los clientes de Cencosud. Bajo este desafío he trabajado en diferentes áreas y unidades de negocio (Supermercados, Mejoramiento de hogar Easy, RRHH, Logística, etc.). He apoyado, entrenado y colaborado en el desarrollo y madurez de diferentes roles (Scrum Masters, Product Owners, Champions, Líderes Ágiles, etc.). He trabajado en el diseño y estrategia de la evolución de la Transformación Digital (en Estrategia Corporativa y en RRHH). Ayude en el trabajo de la Academia Digital y comunicación organizacional. Y participé en el diseño de la metodología de Transformación Digital en Cencosud.
+Agile Coach y Digital Transformation Advisor en Transformación Digital del conglomerados de retail en América Latina Cencosud (como consultor y proveedor independiente). Trabajando en el equipo de transformación digital en las oficinas de Cencosud (Santiago de Chile). Buscamos la reinvención de la organización, una nueva forma de ser y hacer, que involucra un cambio cultural, estratégico y tecnológico; con el objetivo de habilitar la agilidad y una manera de generar propuestas de valor que satisfagan y desafíen la experiencia de usuario de los clientes de Cencosud. Bajo este desafío: 
+\begin{itemize}
+\item He trabajado en diferentes áreas y unidades de negocio (Supermercados, Mejoramiento de hogar Easy, RRHH, Logística, etc.) en temas estratégicos, gestión del portafolio de proyectos ágiles con Lean PMO y mejoramiento de procesos con Lean y System Thinking. 
+\item He apoyado, entrenado y colaborado en el desarrollo y madurez de diferentes roles (Scrum Masters, Product Owners, Champions, Líderes Ágiles, etc.). Principalmente he trabajado en capacitación y comunidad de Product Owners en gestión de productos y servicios empleando gestión de iniciativas con Lean PMO y KPI ágiles (con OKRs y Lean Value Tree).
+\item He trabajado en el diseño y estrategia de la evolución de la Transformación Digital (en Estrategia Corporativa y en RRHH). 
+\item Ayudé en gestión del cambio con RRHH en el trabajo de la Academia Digital y comunicación organizacional. 
+\item Participé en el diseño de la metodología de Transformación Digital en Cencosud.
+\item He apoyado, auditado, guiado y entrenado a diferentes equipos ágiles con el marco Scrum, el método Kanban e Ingeniería de Software con DevOps.
+\end{itemize}
 }
 
 %2018 Fundador de Balancing Loop Consulting SpA
@@ -196,7 +204,7 @@ Agile Coach en Transformación Digital del conglomerados de retail en América L
 \begin{itemize}
 \item Evaluación y acompañamiento en madurez de equipos ágiles.
 \item Acompañamiento en el proceso de transformación Digital.
-\item Capacitación de Equipos, Scrum Masters y Product Owners.
+\item Capacitación de Equipos, Scrum Masters y Product Owners en Scrum, Kanban y Lean.
 \end{itemize}
 }
 
@@ -206,10 +214,10 @@ Agile Coach en Transformación Digital del conglomerados de retail en América L
 \WorkEntry{LATAM Airlines (Globant contractor)}{2015 - Oct. 2017}{ScrumMaster Sr., Team Facilitator y Agile Coach de equipos}
 {Scrum Master en un proyecto para aerolínea LATAM Airlines contratado por Globant Company, trabajando en las oficinas de LATAM, con las siguientes responsabilidades principales:
 \begin{itemize}
-\item Ayudar al equipo empleando las prácticas Agile para cumplir con los compromisos de los proyectos digitales.
-\item Construir un ambiente confiable y seguro para el equipo.
-\item Evaluar la madurez del equipo facilitando su mejora a un ritmo sostenible.
-\item Facilitar el debate, la toma de decisiones y la resolución de conflictos.
+\item Ayudar al equipo empleando las prácticas Agile para cumplir con los compromisos de los proyectos digitales usando Scrum, Scrumban, Kanban, XP, UX Lean, Design Thinking y DevOps.
+\item Construir un ambiente confiable y seguro para el equipo ágil.
+\item Evaluar la madurez del equipo ágil facilitando su mejora a un ritmo sostenible.
+\item Facilitar el debate, la toma de decisiones y la resolución de conflictos en función de los objetivos estratégicos.
 \item Ayudar a la comunicación interna y externa, mejorar la transparencia e irradiar información.
 \item Ayudan a mejorar el trabajo del Product Owner, ayudando a encontrar maneras de mantener el Product Backlog y el Release Plan.
 \item Buscar lograr que el equipo trabaje eficiéntemente bajo los valores ágiles.
@@ -231,7 +239,7 @@ Los últimos meses estuve ejerciendo como Consultor, Agile Coaching y Team Facil
 \WorkEntry{Globant}{2015}{Technical Leader, Scrum Master, Team Facilitator}
 {
 \begin{itemize}
-\item Scrum Master y Team Facilitator de equipos en LAN Airlines trabajando en las oficinas de Globant Company.
+\item Scrum Master y Team Facilitator de equipos en LAN Airlines trabajando en las oficinas de Globant Company y empleando Scrum, Scrumban, XP y DevOps.
 \item Scrum Master y Technical Lead en Perl/Java tecnologías para cuenta de LAN en empresa Globant. Las tecnologías usadas fueron: Perl (POO with Moose, cgi, Test::Moore, Template Toolkit), MySQL, Linux, SVN, Git-Svn, CSS3, HTML5, Eclipse (RSE, EPIC), Review Board, Jenkins, etc. The Java Technologies used was SOAP, RESTful/RESTEasy, Spring, Maven, Javascript with front-end using MVC (Backbone.js). Los proyectos fueron  relacionados a recolección de datos para envío a Google Analytic, gestión de promosiones y gestión de canje preferente de pasajes y usuarios Lanpass.
 \item Focal point y Desarrollador Java en proyectos de cambio de pasajes con arquitectura SOA.
 \end{itemize}
@@ -254,13 +262,13 @@ Fui Socio fundador y Secretario en una Empresa Cooperativa llamada Make IT Coop.
 
 %2008-2010 Motorola Mobility as Software Engineer.
 \WorkEntry{Motorola Mobility}{2008-2010}{Software Engineer}
-{Fui Ingeniero de Software en Motorola Mobility de Argentina S.A. (Córdoba, Arg.) en proyectos tipo PMI y otros bajo el marco de trabajo eXtreme Programming. Desarrollos aplicaciones Java (J2EE para dispositivos móviles para sistema de telecomunicaciones)}
+{Fui Ingeniero de Software en Motorola Mobility de Argentina S.A. (Córdoba, Arg.) en proyectos tipo PMI y otros bajo el marco ágil de trabajo eXtreme Programming (XP). Desarrollos aplicaciones Java (J2EE para dispositivos móviles para sistema de telecomunicaciones)}
 
 \sepspace
 
 %2008-2010 Motorola S.C.A (Contractor Vates) as Software Engineer.
 \WorkEntry{Motorola S.C.A (Contractor Vates)}{2008-2010}{Software Engineer}
-{Fui desarrollador Java (J2SE and J2EE para dispositivos móviles y sistema de telecomunicaciones) contratado por Vates para trabajar en las oficinas de Motorola.}
+{Fui desarrollador Java (J2SE and J2EE para dispositivos móviles y sistema de telecomunicaciones) contratado por Vates para trabajar en las oficinas de Motorola en equipos PMI Agile.}
 
 \sepspace
 
@@ -313,7 +321,7 @@ Ejercí como Informático Forense para el tribunal tercero de Comodoro Rivadavia
 
 %2000-2003 - DeSoft Development of Software
 \WorkEntry{DeSoft}{2000-2003}{Developer, Technical Leader}{
-Trabajé como cofundador y asociado en un emprendimiento PYME de desarrollo de software. Me desenvolví como Analista, Desarrollador y Líder técnico en proyectos de desarrollo de software para empresas de terserización petrolera y máquinas viales (de la Patagonia Argentina).}
+Trabajé como cofundador y asociado en un emprendimiento PYME de desarrollo ágil de software. Me desenvolví como Analista, Desarrollador y Líder técnico en proyectos de desarrollo de software para empresas de terserización petrolera y máquinas viales (de la Patagonia Argentina). Desarrollabamos software bajo un marco ágil con la metodología XP. Trabajabamos con desarrollo de MVPs y entregas por valor.}
 
 \sepspace
 
@@ -369,7 +377,7 @@ URL: \url{http://www.scrum-institute.org/International_Scrum_Institute_Certifica
 }
 \sepspace
 
-\CertificatesEntry{\large{\textbf{Leading SAFe}}}{}
+\CertificatesEntry{\large{\textbf{Leading SAFe, PMPO}}}{}
 \CertificatesEntry{}{
 Leading SAFe en curso.\newline
 
@@ -383,6 +391,7 @@ Leading SAFe en curso.\newline
 Para mejorar día a día, además de la experiencia en campo, soy autodidacta, por lo que leo bastante y estudio en forma independiente. A su vez he realizado diferentes capacitaciones y diplomados de los cuales doy cuenta de algunos a continuación:
 \sepspace
 
+\CoursesEntry{Power MBA}{2019}{Desarrollo Power MBA}{}
 \CoursesEntry{Gestión Ágil de Proyectos (PMI-ACP)}{2017}{Present License CER-R5LNG3F3-210777}{}
 \CoursesEntry{Curso de Certified Scrum Master}{2015}{Kleer, Cba.-Arg.}{}
 \CoursesEntry{Scrum Leader}{2015}{ValueInnova, Cba.-Arg.}{}
@@ -399,7 +408,7 @@ Para mejorar día a día, además de la experiencia en campo, soy autodidacta, p
 
 \sepspace
 
-\SkillsEntry{\textbf{Métodos}}{Métodos y marcos de trabajo como: Marco Scrum (Scrum.or), Método Kanban, Scrumban, Lean Startup.
+\SkillsEntry{\textbf{Métodos}}{Métodos y marcos de trabajo como: Marco Scrum (Scrum.or), Método Kanban, Scrumban, Lean Startup, XP, DevOps.
 }
 \sepspace
 
@@ -407,11 +416,11 @@ Para mejorar día a día, además de la experiencia en campo, soy autodidacta, p
 }
 \sepspace
 
-\SkillsEntry{\textbf{Change Mgmt.}}{Métodos de gestión del cambio como: Change Management 3.0 (J. Appelo), Leading Change (J. Kotter), Retional Model (R. Ackoff), PDCA Model y SoPK (E. Deming), ADKAR Model (PROSCI), Toyota Kata y Kanban System.).
+\SkillsEntry{\textbf{Change Mgmt.}}{Métodos de gestión del cambio como: Change Management 3.0 (J. Appelo), Leading Change (J. Kotter), Retional Model (R. Ackoff), PDCA Model y SoPK (E. Deming), ADKAR Model (PROSCI), Toyota Kata y Kanban System.) y POWER Agile.
 }
 \sepspace
 
-\SkillsEntry{\textbf{Management}}{Teorías de gestión: Management 2.0, Systemic Management y Management 3.0 (J. Appelo).).
+\SkillsEntry{\textbf{Management}}{Teorías de gestión: Management 2.0, Systemic Management, Management 3.0 (J. Appelo) y Agile Management.).
 }
 \sepspace
 
@@ -427,7 +436,7 @@ Para mejorar día a día, además de la experiencia en campo, soy autodidacta, p
 %%% ------------------------------------------------------------
 \NewPart{Referencias}{}
 Para más información ver el prefil en linkedin.
-Última fecha de actualización: 21 de Octubre de 2018.
+Última fecha de actualización: 01 de Septiembre de 2019.
 \sepspace
 
 \end{document}
